# pictoji

./: .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE.txt  MANIFEST.in  README.md  pictoji-artwork-specs.md  pictoji-introspection-aitest.md  pictoji-introspection-test.md  pictoji-test.md  pictoji.md  pictolang-test.md  pictolang.md  pyproject.toml
.github/workflows/: README.md  version-stamp-and-report.yml
ci/: README.md
ci/0.6.21/: report.txt
ci/0.6.23/: report.txt
ci/0.6.25/: report.txt
ci/0.6.55/: report.txt
dev/: README.md  algebra-experiments.md  discarded-characters.md  logo-experiments.md  pictoji-dev-arch.md  pictoji-dev.md  pictoji_dev.py  pictoji_pdp_0.2.11.py  pictolang-dev.md  pictolang_pdp_2.11.py  prova.n3  requirements.txt  tests-0.2.11.md  tests-2.11.md  tgraph.py
dev/demo-attempt/: temple-5.html  temple-ltk.html  temple-ltk2.html  temple-ltk3.html  temple-ltk4.html  temple.html  temple.jsx
dev/failed-d2-experiments/: a.drawio  b.drawio  c.drawio  clouds.drawio  clouds_v2.drawio  clouds_v3.drawio  container3.drawio  containers.drawio  containers2.drawio  d.drawio  d2-to-drawio-chatgpt5-prompt.md  d2_rules_test.drawio  d2_to_drawio_network.diagram 2.drawio  d2_to_drawio_network.diagram.drawio  d2_translation.drawio  d2_translation_fixed2.drawio  d2_translation_fixed3.drawio  d2_translation_fixed4.drawio  diag.drawio  vets1.d2  vets2.d2  vets3.d2
pictoji/: __init__.py
pictoji/cli/: __init__.py  release.py
pictoji/runtime/: __init__.py
pictoji/web/: __init__.py
src/pictoji/: __init__.py  cli.py
tools/: README.md  pyproject.toml
tools/pictoji/: __init__.py
