# Pictoji - A Relatable Algebra for the People
# Monorepo configuration with shared metadata

[project]
name = "pictoji"
version = "1.0.0"
description = "A Relatable Algebra for the People - A new old language for AI-assisted mathemojics of meaning"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Pictoji Team"}
]
keywords = ["pictoji", "emoji", "unicode", "language", "specification"]

[project.urls]
Homepage = "https://github.com/DavidLeoni/pictoji"
Repository = "https://github.com/DavidLeoni/pictoji"
Documentation = "https://github.com/DavidLeoni/pictoji/blob/main/pictoji.md"
Specification = "https://github.com/DavidLeoni/pictoji/blob/main/pictoji.md"

# Note: This is the root configuration for the Pictoji monorepo.
# Individual packages have their own pyproject.toml:
# - tools/pyproject.toml - Python development tools (v1.0)
# - pictoji-web/pyproject.toml - PyScript browser implementation (v2.0 future)
# - pictoji-runtime/pyproject.toml - C/WASM runtime (v3.0 future)
