# Pictoji - A Relatable Algebra for the People
# Single package with multiple optional submodules
# NOTE: UTF8 BOM is *NOT* allowed by toml specs!

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pictoji"
version = "0.6.52.DEV+p"
description = "A Relatable Algebra for the People - A new old language for AI-assisted mathemojics of meaning"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
    {name = "David Leoni"}
]
keywords = ["pictoji", "emoji", "unicode", "language", "specification", "ai", "tokens"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (if any shared across all submodules)
dependencies = []

[project.optional-dependencies]
# v1.0 CLI tools
cli = [
    "tiktoken>=0.5.0",
    "anthropic>=0.39.0",
    "google-genai>=0.3.0",
]

# v2.0 web (maybe in the future)
# web = [# "pyscript>=2024.1.1",]
# v3.0 runtime (wonderland future)
#runtime = [ "cffi>=1.15.0", ]

# Development dependencies
dev = [
    "build",
    "twine",
    "pytest",
]
# Install everything
all = [
    "tiktoken>=0.5.0",
    "anthropic>=0.39.0",
    "google-genai>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/DavidLeoni/pictoji"
Repository = "https://github.com/DavidLeoni/pictoji"
Documentation = "https://github.com/DavidLeoni/pictoji/blob/main/pictoji.md"
Specification = "https://github.com/DavidLeoni/pictoji/blob/main/pictoji.md"

[project.scripts]
pictoji = "pictoji.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pictoji*"]

# Note: This is a single package with multiple submodules:
# - pictoji.cli - Python development tools (v1.0)
# - pictoji.web - PyScript browser implementation (v2.0 future)
# - pictoji.runtime - C/WASM runtime (v3.0 future)
