[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pictoji"
version = "1.0.0"
description = "Pictoji development tools - AI token counter and Unicode analyzer"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "../LICENSE.txt"}
authors = [
    {name = "Pictoji Team"}
]
keywords = ["pictoji", "emoji", "unicode", "ai", "tokens", "nlp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.39.0",
    "google-genai>=0.3.0",
]
dev = [
    "build",
    "twine",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/DavidLeoni/pictoji"
Repository = "https://github.com/DavidLeoni/pictoji"
Documentation = "https://github.com/DavidLeoni/pictoji/blob/main/pictoji.md"

[project.scripts]
pictoji = "pictoji.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pictoji*"]
